@startuml
skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing true
left to right direction
skinparam classAttributeIconSize 0
hide methods

class Client {
      - name: String
      - emailAddress: String
      - phoneNumber: String
      - password: String
      - role: String
      - clientType: String
}

class Item {
    - condition: String
    - image: String
    - category: Category
    + Item(...)
}

class Advertisement {
    - title: String
    - description: String
    - date: Date
    - municipality: String
    - status: AdvertisementStatus
    + Advertisement(...)
}

' --- Associações ---
Client "1" -- "0..*" Advertisement : owns
Advertisement "1" -- "1" Item : has >

@enduml

@enduml